2016-10-23  Albrecht Dreß

Support GCR to display a certificate widget

	* configure.ac: new option --with-gcr.
	* libbalsa/libbalsa.c (ask_cert_real): use gcr certificate API
	to display the certificate.

2016-10-23  Albrecht Dreß

Disable header bars in the address book widgets if the
environment variable BALSA_DIALOG_HEADERBAR is 0.

	* src/ab-window.c (balsa_ab_window_new): respect
	BALSA_DIALOG_HEADERBAR environment variable.

2016-10-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	We no longer use libiconv.

	* configure.ac: remove --with-iconv option.
	* libbalsa/address-book-ldap.c: do not include iconv.h.
	* src/balsa-message.c: ditto.

2016-10-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix deprecation issues in gtk 3.22

	Replace gtk_window_set_wmclass, which is deprecated in gtk 3.22,
	with gtk_window_set_role.

	* libbalsa/libbalsa.c (ask_cert_real), (ask_timeout_real):
	* libbalsa/send.c (ensure_send_progress_dialog):
	* libbalsa/source-viewer.c (libbalsa_show_message_source):
	* src/ab-window.c (balsa_ab_window_init):
	* src/filter-edit-dialog.c (filters_edit_dialog):
	* src/filter-export-dialog.c (filters_export_dialog):
	* src/filter-run-dialog.c (balsa_filter_run_dialog_new):
	* src/folder-conf.c (folder_conf_imap_node),
	(folder_conf_imap_sub_node):
	* src/information-dialog.c (balsa_information_list):
	* src/main-window.c (ensure_check_mail_dialog),
	(bw_display_new_mail_notification):
	* src/message-window.c (message_window_new):
	* src/sendmsg-window.c (sendmsg_window_new):
	* src/toolbar-prefs.c (customize_dialog_cb):

2016-10-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix deprecation issues in gtk 3.22

	The Gtk+ API for popping up context menus has changed in 3.22;
	gtk_menu_popup is deprecated.

	* src/balsa-index.c (bndx_do_popup):
	* src/balsa-mblist.c (bmbl_do_popup):
	* src/balsa-message.c (balsa_headers_attachments_popup),
	(tree_mult_selection_popup), (tree_button_press_cb):